--- a/css/costo.css
+++ b/css/costo.css
@@ -10,17 +10,26 @@
     --blue-bayoux-950: #080d28;
 }
 
-/* Estilos generales */
-body {
-    font-family: 'Poppins', sans-serif;
+*{
     margin: 0;
     padding: 0;
-    background-color: var(--blue-bayoux-200);
+}
+
+/* Estilos generales */
+body {
+    background-image: url(../img/imagen4.png);
+    background-size: cover; 
+    background-repeat: no-repeat;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
 }
 
 .contenedor {
     max-width: 800px;
-    margin: 20px auto;
+    margin: 20px ;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
