--- a/css/empaquetamiento.css
+++ b/css/empaquetamiento.css
@@ -10,52 +10,61 @@
     --blue-bayoux-950: #080d28;
 }
 
-/* Estilos generales */
-body {
-    font-family: 'Poppins', sans-serif;
+*{
     margin: 0;
     padding: 0;
-    background-color: var(--blue-bayoux-200);
+}
+
+/* Estilos generales */
+body {
+    align-items: center; /**/
+    background-image: url(../img/imagen4.png);
+    background-size: cover; 
+    background-repeat: no-repeat;
+    display: flex; /**/
+    font-family: 'Poppins', sans-serif;
+    height: 100vh; /**/
+    justify-content: center; /**/
 }
 
 .contenedor {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: 20px ;
+    padding: 20px;
     position: relative; /* Establecer posición relativa */
 }
 
 h1 {
-    text-align: center;
-    margin-bottom: 20px;
     font-family: 'Protest Strike', sans-serif;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 /* Estilos para el buscador */
 .buscador {
-    display: flex;
     align-items: center;
+    display: flex;
     margin-bottom: 20px;
 }
 
 .buscador input {
+    font-size: 16px;
     flex: 0 1 auto;
     padding: 10px;
-    font-size: 16px;
 }
 
 .buscador-btn {
-    padding: 10px 20px;
     background-color: var(--blue-bayoux-700);
-    color: #fff;
     border: none;
     border-radius: 5px;
+    color: #fff;
     cursor: pointer;
-    transition: background-color 0.3s ease;
     margin-left: 10px;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease;
 }
 
 .buscador-btn:hover {
@@ -72,9 +81,9 @@ h1 {
 
 .user {
     background-color: #f9f9f9;
-    padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 
 .user-info h2 {
@@ -91,11 +100,11 @@ h1 {
 }
 
 .user-actions button {
-    padding: 5px 10px;
-    margin-right: 5px;
-    cursor: pointer;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    margin-right: 5px;
+    padding: 5px 10px;
     transition: background-color 0.3s ease;
 }
 
@@ -109,14 +118,14 @@ h1 {
 .next-btn,
 .anterior,
 .siguiente {
-    padding: 10px 20px;
     background-color: var(--blue-bayoux-700);
-    color: #fff;
     border: none;
     border-radius: 5px;
+    color: #fff;
     cursor: pointer;
-    transition: background-color 0.3s ease;
     margin: 0 5px;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease;
     transition: all 0.2s;
 }
 
@@ -131,28 +140,28 @@ h1 {
 
 /* Estilos para el botón de añadir usuario */
 .add-user {
-    position: absolute; /* Establecer posición absoluta */
-    top: 80px; /* Bajar el botón */
-    right: 20px; /* Alinear con el final del contenedor */
     margin-top: 20px;
+    position: absolute; /* Establecer posición absoluta */
+    right: 20px; /* Alinear con el final del contenedor */
+    top: 80px; /* Bajar el botón */
 }
 
 .add-user-btn {
-    padding: 10px 20px;
+    align-items: center;
     background-color: #28a745;
-    color: #fff;
     border: none;
     border-radius: 5px;
+    color: #fff;
     cursor: pointer;
-    transition: background-color 0.3s ease;
     display: flex;
-    align-items: center;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease;
 }
 
 .add-user-btn img {
-    width: 30px;
     height: 30px;
     margin-right: 10px;
+    width: 30px;
 }
 
 .add-user-btn:hover {
@@ -180,11 +189,11 @@ h1 {
 }
 
 .tabla td button {
-    padding: 5px 20px;
-    margin-right: 5px;
-    cursor: pointer;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    margin-right: 5px;
+    padding: 5px 20px;
     transition: background-color 0.3s ease;
 }
 
@@ -225,164 +234,162 @@ h1 {
 
 /* Estilos para los modales */
 .modal {
-    font-family:'Poppins', sans-serif;
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    /* Centrar horizontalmente */
-    transform: translate(-50%, -50%);
-    /* Centrar el modal */
     background-color: rgba(0, 0, 0, 0.5);
     /* Fondo semi-transparente */
-    z-index: 1000;
-    /* Colocar el modal por encima de otros elementos */
-    width: 100%;
-    /* Ocupar todo el ancho disponible */
+    display: none;
+    font-family:'Poppins', sans-serif;
     height: 100%;
     /* Ocupar toda la altura disponible */
+    left: 50%;
+    /* Centrar horizontalmente */
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* Centrar el modal */
+    width: 100%;
+    /* Ocupar todo el ancho disponible */
+    z-index: 1000;
+    /* Colocar el modal por encima de otros elementos */
 }
 
 .eliminar-modal {
     background-color: #fff;
     /* Fondo blanco */
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    /* Espaciado interno */
     border-radius: 10px;
     /* Bordes redondeados */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     /* Sombra */
-    max-width: 50%;
-    /* Ancho máximo del contenido */
+    display: flex;
+    flex-direction: column;
     height: auto;
     /* Altura máxima del contenido */
-    overflow-y: auto;
-    /* Habilitar el desplazamiento vertical si es necesario */
-    position: relative;
-    /* Establecer la posición relativa para los botones */
+    max-width: 50%;
+    /* Ancho máximo del contenido */
     margin: auto;
     /* Centrar el contenido horizontalmente */
     margin-top: 10%;
     /* Margen superior ajustado para centrar verticalmente */
+    overflow-y: auto;
+    /* Habilitar el desplazamiento vertical si es necesario */
+    padding: 20px;
+    /* Espaciado interno */
+    position: relative;
+    /* Establecer la posición relativa para los botones */
 }
 
 .eliminar-modal h2 {
-    text-align: center;
     font-family: 'Protest Strike', sans-serif;
+    text-align: center;
 }
 
 .modal-contenido {
     background-color: #fff;
-    /* Fondo blanco */
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    /* Espaciado interno */
     border-radius: 10px;
     /* Bordes redondeados */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     /* Sombra */
-    max-width: 50%;
-    /* Ancho máximo del contenido */
+    display: flex;
+    flex-direction: column;
     height: 60%;
     /* Altura máxima del contenido */
-    overflow-y: auto;
-    /* Habilitar el desplazamiento vertical si es necesario */
-    position: relative;
-    /* Establecer la posición relativa para los botones */
+    max-width: 50%;
+    /* Ancho máximo del contenido */
     margin: auto;
     /* Centrar el contenido horizontalmente */
     margin-top: 10%;
     /* Margen superior ajustado para centrar verticalmente */
+    overflow-y: auto;
+    /* Habilitar el desplazamiento vertical si es necesario */
+    position: relative;
+    /* Establecer la posición relativa para los botones */
+    padding: 20px;
+    /* Espaciado interno */
 }
 
 .modal-contenido h2 {
-    text-align: center;
     font-family: 'Protest Strike', sans-serif;
+    text-align: center;
 }
 
 .form_content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* width: 80%; */
     height: 100%;
+    justify-content: center;
     padding: 8px;
 }
 
 .form_content .inputDate,
 .selectDate {
     border: solid 1px #ddd;
+    border-radius: 6px;
     padding: 15px;
     outline: none;
-    border-radius: 6px;
 }
 
 /* Estilos para el botón de cerrar */
 .cerrar {
-    position: absolute;
-    /* Establecer la posición absoluta */
-    top: 10px;
-    /* Espaciado superior */
-    right: 10px;
-    /* Espaciado derecho */
     cursor: pointer;
     /* Mostrar el cursor como puntero */
     color: #333;
     /* Color del icono */
     font-size: 20px;
     /* Tamaño del icono */
+    position: absolute;
+    /* Establecer la posición absoluta */
+    right: 10px;
+    /* Espaciado derecho */
+    top: 10px;
+    /* Espaciado superior */
 }
 
 /* Estilos para los botones dentro del modal */
 .modal-botones {
-    text-align: center;
-    /* Alinear los botones al centro */
     margin-top: 20px;
     /* Espaciado superior */
+    text-align: center;
+    /* Alinear los botones al centro */
 }
 
 .modal-botones .confirmar-eliminar {
-    padding: 10px 20px;
-    /* Espaciado interno */
-    margin: 0 10px;
-    /* Espaciado externo */
+    background-color: #ff4d4d;
+    border: solid 1px #ff4d4d;
+    /* Color de fondo */
     border: none;
     /* Quitar el bord   e */
     border-radius: 5px;
     /* Bordes redondeados */
-    cursor: pointer;
-    /* Mostrar el cursor como puntero */
-    background-color: #ff4d4d;
-    border: solid 1px #ff4d4d;
-    /* Color de fondo */
     color: #fff;
     /* Color del texto */
+    cursor: pointer;
+    /* Mostrar el cursor como puntero */
     font-size: 16px;
     /* Tamaño del texto */
+    margin: 0 10px;
+    /* Espaciado externo */
+    padding: 10px 20px;
+    /* Espaciado interno */
     transition: background-color 0.3s ease;
     /* Transición suave al pasar el ratón */
 }
 
 .modal-botones .cancelar {
-    padding: 10px 20px;
-    /* Espaciado interno */
-    margin: 0 10px;
-    /* Espaciado externo */
+    background-color:#28a745 ;
+    /* Color de fondo */
     border: none;
     /* Quitar el bord   e */
     border-radius: 5px;
     /* Bordes redondeados */
-    cursor: pointer;
-    /* Mostrar el cursor como puntero */
-    background-color:#28a745 ;
-    /* Color de fondo */
     color: #fff;
     /* Color del texto */
+    cursor: pointer;
+    /* Mostrar el cursor como puntero */
     font-size: 16px;
     /* Tamaño del texto */
+    margin: 0 10px;
+    /* Espaciado externo */
+    padding: 10px 20px;
+    /* Espaciado interno */
     transition: background-color 0.3s ease;
     /* Transición suave al pasar el ratón */
 }
@@ -390,33 +397,30 @@ h1 {
 .modal-botones .confirmar-eliminar:hover {
     background-color: var(--blue-bayoux-300);
     color: #ff4d4d;
-       /* Cambiar el color de fondo al pasar el ratón */
-
+    /* Cambiar el color de fondo al pasar el ratón */
     }
 
 .modal-botones .cancelar:hover {
     background-color: #218838;
-
 }
 
 .modal-botones .cancelar_md {
-    padding: 10px 20px;
-    /* Espaciado interno */
-    margin: 0 10px;
-    /* Espaciado externo */
+    background-color:#FF8C00;
+    /* Color de fondo */
     border: none;
     /* Quitar el bord   e */
     border-radius: 5px;
     /* Bordes redondeados */
-    cursor: pointer;
-    /* Mostrar el cursor como puntero */
-    background-color:#FF8C00;
-    ;
-    /* Color de fondo */
     color: #fff;
     /* Color del texto */
+    cursor: pointer;
+    /* Mostrar el cursor como puntero */
     font-size: 16px;
     /* Tamaño del texto */
+    margin: 0 10px;
+    /* Espaciado externo */
+    padding: 10px 20px;
+    /* Espaciado interno */
     transition: background-color 0.3s ease;
     /* Transición suave al pasar el ratón */
 }
@@ -427,25 +431,25 @@ h1 {
 /* Estilos para el botón de guardar-modificacion y cambio_contraseña */
 .modal-botones .guardar-modificacion,
 .modal-botones .cambio_contraseña {
-    padding: 10px 20px;
-    margin: 10px; /* Ajustar el margen externo para separar los botones */
+    background-color: var(--blue-bayoux-700);
     border: none;
     border-radius: 8px; /* Hacer los bordes más esquinados */
-    cursor: pointer;
-    background-color: var(--blue-bayoux-700);
     color: #fff;
+    cursor: pointer;
     font-size: 16px;
+    margin: 10px; /* Ajustar el margen externo para separar los botones */
+    padding: 10px 20px;
     transition: background-color 0.3s ease;
 }
 
 /* Estilo específico para los botones dentro del modal */
 .modal-botones button,
 .modal-botones a {
-    padding: 10px 20px;
-    margin-top: 20px; /* Ajustamos el margen superior para separar los botones */
     border: none;
     border-radius: 8px; /* Hacemos los bordes más esquinados */
     cursor: pointer;
+    margin-top: 20px; /* Ajustamos el margen superior para separar los botones */
+    padding: 10px 20px;
     transition: background-color 0.3s ease;
 }
 
