--- a/css/calculoBasadoDias.css
+++ b/css/calculoBasadoDias.css
@@ -15,6 +15,8 @@
 
 body {
     background: var(--blue-bayoux-100);
+    background-image: url(/img/imagen4.png);
+    background-size: cover;
     color: var(--blue-bayoux-950);
     margin-top: 100px;
     overflow: hidden;
